--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,7 @@ path="src/main.rs"
 [dependencies]
 bytes = "0.4.12"
 tokio = "0.2.0-alpha.6"
-tokio-batch = { git = "https://github.com/doyoubi/tokio-batch", branch = "ReplaceTimer" }
+tokio-batch = { git = "https://github.com/doyoubi/tokio-batch", branch = "ReplaceTimerDev" }
 futures-preview = { version = "0.3.0-alpha.19" }
+futures-timer = "1.0.2"
+clap = "2.33.0"
